# incubator-mesatee

./: Makefile
cmake/scripts/: setup_cmake_tomls
mesatee_cli/: Cargo.toml
mesatee_services/acs/: model.conf
mesatee_services/acs/client/src/: acs_client.rs  lib.rs
mesatee_services/acs/proto/: Cargo.toml
mesatee_services/acs/python/: ffi.py  perm.py
mesatee_services/acs/sgx_app/: Cargo.toml
mesatee_services/acs/sgx_trusted_lib/: Cargo.toml
mesatee_services/acs/sgx_trusted_lib/src/: acs.rs  sgx.rs
service_proposal/: Cargo.toml  build.rs
service_proposal/src/: main.rs
service_proposal/src/proto/: credential.proto  file.proto  file_common.proto  file_common_proto.rs  file_external.proto  file_op.proto  kms.proto  kms_proto.rs  mesatee_file.rs  mod.rs
service_proposal/src/services/: mod.rs
service_proposal/src/services/auth/: mod.rs
service_proposal/src/services/kms/: mod.rs
service_proposal/src/services/tdfs/: mesatee_file.rs  mod.rs  mt_file.rs
toolchain_deps/: Cargo.unix_app.toml
